Pull down dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html ng-app="ztop">
 <head>
   <title>Process Monitor</title>
-  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+  <link rel="stylesheet" href="css/pure-min.css">
   <link rel="stylesheet" href="build/app.css"></link>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.min.js"></script>
+  <script src="js/angular.min.js"></script>
+  <script src="js/angular-route.min.js"></script>
   <script src="build/app-built.js"></script>
 </head>
 <body>
