--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="build/app.css"></link>
   <script src="js/angular.min.js"></script>
   <script src="js/angular-route.min.js"></script>
+  <script src="js/d3.v3.min.js"></script>
   <script src="build/app-built.js"></script>
 </head>
 <body>
