Add stub 'processes' route

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       <a href="/" class="pure-menu-heading">ztop</a>
       <ul>
         <li ng-class="navClass('system')"><a href="/system">System</a></li>
+        <li ng-class="navClass('processes')"><a href="/processes">Processes</a></li>
       </ul>
     </nav>
   </header>
