--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       <ul>
         <li ng-class="navClass('system')"><a href="/system">System</a></li>
         <li ng-class="navClass('processes')"><a href="/processes">Processes</a></li>
+        <li ng-class="navClass('resources')"><a href="/resources">Resources</a></li>
       </ul>
     </nav>
   </header>
